@@ -334,7 +334,7 @@
       <module id="zenity" branch="gnome-2-16"/>
     </category>
   </release>
-  <release id="gnome-2-18">
+  <release id="gnome-2-18" stringfrozen="true">
     <_description>Gnome 2.18</_description>
     <category id="platform">
       <_description>GNOME developer platform.</_description>
