@@ -1,3 +1,8 @@
+2007-02-28  Djihed Afifi  <djihed@gmail.com>
+
+	* gnome-modules.xml.in : mark gnome-2-18 packages string frozen.
+	* releases.xml.in : mark gnome-2-18 string frozen.
+
 2007-02-25  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* translation-teams.xml.in: Remove obsolete norwegian entry.
